progres hari ini

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "material-ui-flat-pagination": "^4.0.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^1.0.1",
     "react": "^16.11.0",
     "react-audio-player": "^0.13.0",
     "react-chartjs-2": "^2.9.0",
